# qseal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: action.Dockerfile  sqlsolver-smoke.Dockerfile
docs/: architecture.md  artifacts.md  caching-and-trajectories.md  candidate-evidence-ci.md  ci.md  duckdb-fixtures.md  github-actions.md  llm-candidates.md  performance-evidence.md  product-demo.md  qed-spike.md  real-project-evaluation.md  rewrite-environment.md  rewrite-policy-gym.md  roadmap.md  scope.md  search-baselines.md  sqlsolver-spike.md  task-corpus.md  verieql-spike.md
examples/benchmark/: setup.sql
examples/candidates/: original.sql  schema.yml
examples/candidates/manual/: 001_manual_distinct_removed.sql  metadata.json
examples/dbt/: not_null.sql  schema.yml
examples/dbt_project/models/: fact_orders.sql  schema.yml
examples/distinct/: original_where.sql  rewritten_where.sql
examples/join_elimination/: original.sql  rewritten.sql  schema.yml
examples/predicate_pushdown/: original.sql  rewritten.sql
examples/product_demo/: README.md  setup.sql
examples/product_demo/candidates/: 001_remove_distinct.sql  002_filter_rows.sql  metadata.json
examples/unsupported/: join.sql
scripts/: action_entrypoint.py  benchmark_proven_candidates.py  build_z3_java_native.sh  compare_real_project_reports.py  evaluate_real_projects.sh  explain_proven_candidates.py  generate_llm_candidates.py  modal_benchmark.py  modal_verify.py  package_smoke.sh  probe_bird_coverage.py  probe_bird_verdict.py  qed_spike_unknowns.py  run_llm_verification_sqlsolver.sh  run_qseal_sqlsolver_candidate_smoke.sh  run_qseal_sqlsolver_fixture.sh  run_qseal_sqlsolver_pair.sh  run_snowprove_sqlsolver_candidate_smoke.sh  run_snowprove_sqlsolver_fixture.sh  run_snowprove_sqlsolver_pair.sh  run_sqlsolver_container_smoke.sh  run_sqlsolver_fixture.sh  run_sqlsolver_native.sh  run_verieql_spike.sh  sqlsolver_command.sh  verieql_driver.py  verieql_spike.py  verify_llm_candidates.py
src/qseal/: cli.py  dialects.py  evaluation.py
src/qseal/benchmark/: __init__.py  duckdb.py  model.py  snowflake.py  snowflake_suite.py
src/qseal/candidates/: __init__.py  benchmarking.py  bundle.py  evidence.py  explain.py  generation.py  verification.py
src/qseal/cli/: __init__.py  benchmark.py  benchmark_suite.py  candidates.py  check.py  common.py  corpus.py  dbt.py  fixtures.py  llm.py  main.py  policy.py  refute.py  suggest.py  types.py
src/qseal/constraints/: dbt_loader.py  loader.py  model.py  yaml_loader.py
src/qseal/corpora/: __init__.py
src/qseal/corpus/: __init__.py  aggregate.py  inspect.py  loader.py  materialize.py  model.py  repeat.py  runner.py  summary.py  trajectories.py
src/qseal/dbt/: git_diff.py  intake.py  scan.py
src/qseal/environment/: __init__.py  cache.py  core.py  model.py  (+1 more)
src/snowprove/: __init__.py  cache.py  cli.py  evaluation.py
tests/: test_accepted_values_case.py  test_accepted_values_filter.py  test_action_entrypoint.py  test_candidate_evidence.py  test_candidate_generation.py  test_candidate_verification.py  test_check_verifier.py  test_cli.py  test_constraint_loader.py  test_constraints.py  test_corpus.py  test_corpus_aggregate.py  test_corpus_runner.py  test_corpus_summary.py  test_corpus_trajectories.py  test_count_distinct_rewrite.py  test_dbt_diff_scoping.py  test_dbt_intake.py  test_dbt_jinja.py  test_dbt_loader.py  test_dbt_project.py  test_dbt_scan.py  test_diff_report.py  test_distinct_rewrite.py  test_duckdb_benchmark.py  test_duckdb_fixtures.py  test_environment.py  test_environment_cache.py  test_evaluation.py  test_group_by_unique.py  test_join_distinct_exists.py  test_join_elimination.py  test_json_report.py  test_markdown_report.py  test_not_null_filter.py  test_pair_reduction.py  test_parser.py  test_patch_report.py  test_policy_baseline.py  test_predicate_pushdown.py  (+13 more)
(+218 files in other folders)
