[project]
name = "snowprove"
version = "0.1.0"
description = "Verified-safe SQL rewrites for a constrained Snowflake and DuckDB SQL subset."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "snowprove contributors" },
]
keywords = ["sql", "snowflake", "dbt", "formal-verification", "query-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sqlglot>=26.3.0",
]

[project.scripts]
snowprove = "snowprove.cli:main"

[project.urls]
Repository = "https://github.com/neelvad/snowprove"
Issues = "https://github.com/neelvad/snowprove/issues"
Documentation = "https://github.com/neelvad/snowprove#readme"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
