[project]
name = "qseal"
version = "0.1.0"
description = "QuerySeal verifies safe SQL rewrites for a constrained Snowflake and DuckDB SQL subset."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "QuerySeal contributors" },
]
keywords = ["sql", "snowflake", "dbt", "formal-verification", "query-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.4.0",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sqlglot>=26.3.0",
]

[project.scripts]
qseal = "qseal.cli:main"

[project.urls]
Repository = "https://github.com/neelvad/qseal"
Issues = "https://github.com/neelvad/qseal/issues"
Documentation = "https://github.com/neelvad/qseal#readme"

[dependency-groups]
dev = [
    "anthropic>=0.109.1",
    "modal>=1.5.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "snowflake-connector-python>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qseal"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache",
    "/.venv",
    "/build",
    "/dist",
    "/qseal-runs",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
